--- a/01-namespace.yaml
+++ b/01-namespace.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: roboshop
+  name: roboshop-demo
   labels:
     project: roboshop
     environment: development
