--- a/mongodb/manifest.yaml
+++ b/mongodb/manifest.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongodb
-  namespace: roboshop
+  namespace: roboshop-dev
   #replica set labels
   labels:
     project: roboshop
@@ -38,7 +38,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mongodb
-  namespace: roboshop
+  namespace: roboshop-dev
 spec:
   selector:
     project: roboshop
