--- a/mongodb/manifest.yaml
+++ b/mongodb/manifest.yaml
@@ -32,6 +32,11 @@ spec:
           tcpSocket:
             port: 27017
           initialDelaySeconds: 10
+          periodSeconds: 10
+        livenessProbe:
+          tcpSocket:
+            port: 27017
+          initialDelaySeconds: 5
           periodSeconds: 5
 ---
 apiVersion: v1
