--- a/debug/Dockerfile
+++ b/debug/Dockerfile
@@ -1,5 +1,5 @@
 FROM almalinux:8
 RUN dnf install -y telnet net-tools iproute bind-utils iputils traceroute curl wget nmap
-RUN USERADD roboshop
+RUN useradd roboshop
 USER roboshop
 CMD ["sleep","10000"]
