--- a/catalogue/manifest.yaml
+++ b/catalogue/manifest.yaml
@@ -4,8 +4,8 @@ metadata:
   name: catalogue
   namespace: roboshop-demo
 data:
-  MONGO= "true"
-  MONGO_URL= "mongodb://"mongodb":27017/catalogue"
+  MONGO: "true"
+  MONGO_URL: "mongodb://mongodb:27017/catalogue"
 ---
 apiVersion: apps/v1
 kind: Deployment
