--- a/user/manifest.yaml
+++ b/user/manifest.yaml
@@ -4,7 +4,7 @@ metadata:
   name: user
   namespace: roboshop-demo
 data:
-  REDIS_URL= "redis://redis:6379"
+  REDIS_URL: "redis://redis:6379"
   MONGO_URL: "mongodb://mongodb:27017/user"
 ---
 apiVersion: apps/v1
