--- a/mysql/manifest.yaml
+++ b/mysql/manifest.yaml
@@ -38,16 +38,16 @@ spec:
       - name: mysql
         image: docker4rajashekar/mysql:v1
         imagePullPolicy: Always
-        readinessProbe:
-          tcpSocket:
-            port: 3306
-          initialDelaySeconds: 30
-          periodSeconds: 10
-        livenessProbe:
-          tcpSocket:
-            port: 3306
-          initialDelaySeconds: 15
-          periodSeconds: 5
+        # readinessProbe:
+        #   tcpSocket:
+        #     port: 3306
+        #   initialDelaySeconds: 30
+        #   periodSeconds: 10
+        # livenessProbe:
+        #   tcpSocket:
+        #     port: 3306
+        #   initialDelaySeconds: 15
+        #   periodSeconds: 5
         volumeMounts:
         - name: mysql-config
           mountPath: /etc/mysql/conf.d/my.cnf
