--- a/frontend/manifest.yaml
+++ b/frontend/manifest.yaml
@@ -4,7 +4,7 @@ metadata:
   name: frontend
   namespace: roboshop-demo
 data:
-  nginx.conf |
+  nginx.conf: |
     user nginx;
     worker_processes auto;
     error_log /var/log/nginx/error.log notice;
