--- a/frontend/manifest.yaml
+++ b/frontend/manifest.yaml
@@ -98,18 +98,18 @@ spec:
         ports:
         - name: liveness-port
           containerPort: 8080
-        readinessProbe:
-          httpGet:
-            path: /health
-            port: liveness-port
-          failureThreshold: 1
-          periodSeconds: 15
-        livenessProbe:
-          httpGet:
-            path: /health
-            port: liveness-port
-          failureThreshold: 1
-          periodSeconds: 15
+        # readinessProbe:
+        #   httpGet:
+        #     path: /health
+        #     port: liveness-port
+        #   failureThreshold: 1
+        #   periodSeconds: 15
+        # livenessProbe:
+        #   httpGet:
+        #     path: /health
+        #     port: liveness-port
+        #   failureThreshold: 1
+        #   periodSeconds: 15
         volumeMounts:
         - name: nginx-config
           mountPath: /etc/nginx/nginx.conf
