--- a/shipping/manifest.yaml
+++ b/shipping/manifest.yaml
@@ -40,18 +40,18 @@ spec:
         ports:
         - name: liveness-port
           containerPort: 8080
-        # readinessProbe:
-        #   httpGet:
-        #     path: /health
-        #     port: liveness-port
-        #   failureThreshold: 1
-        #   periodSeconds: 15
-        # livenessProbe:
-        #   httpGet:
-        #     path: /health
-        #     port: liveness-port
-        #   failureThreshold: 1
-        #   periodSeconds: 15
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: liveness-port
+          failureThreshold: 1
+          periodSeconds: 15
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: liveness-port
+          failureThreshold: 1
+          periodSeconds: 15
 
 ---
 apiVersion: v1
